--- a/src/dynamics/BUILD
+++ b/src/dynamics/BUILD
@@ -2,7 +2,8 @@ cc_library(
     name = "dynamics",
     hdrs = glob(["*.h", "models/*.h", "integration/*.h"]),
     deps = [
-        "//src/geometry:geometry"
+        "//src/geometry:geometry",
+        "//src/commons:parameters"
     ],
 	visibility = ["//visibility:public"]
 )
