--- a/src/BUILD
+++ b/src/BUILD
@@ -4,6 +4,7 @@ cc_library(
   srcs = glob(["*.cc"]),
   deps = [
     "//src/commons:parameters",
+    "//src/geometry:geometry",
     "@com_google_ceres_solver//:ceres"
   ],
 	visibility = ["//visibility:public"]
