Cost functor now calculates the jerk

--- a/src/commons/BUILD
+++ b/src/commons/BUILD
@@ -1,5 +1,12 @@
 cc_library(
   name = "parameters",
-  hdrs = glob(["*.h"]),
+  hdrs = ["parameters.h"],
+	visibility = ["//visibility:public"]
+)
+
+cc_library(
+  name = "commons",
+  hdrs = ["commons.h"],
+  deps = ["//src/geometry:geometry"],
 	visibility = ["//visibility:public"]
 )
