--- a/tests/BUILD
+++ b/tests/BUILD
@@ -33,3 +33,11 @@ cc_test(
   ],
 	visibility = ["//visibility:public"]
 )
+
+  
+py_test(
+  name = "py_basics_tests",
+  srcs = ["py_basics_tests.py"],
+  data = ["//python:optimizer.so"],
+  imports = ["../python/"]
+)
