--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,7 +60,8 @@
     "string": "cpp",
     "variant": "cpp",
     "forward_list": "cpp",
-    "unordered_set": "cpp"
+    "unordered_set": "cpp",
+    "valarray": "cpp"
   },
   "python.pythonPath": "./python/venv/bin/python",
   "python.linting.pylintEnabled": true,
