--- a/src/commons/BUILD
+++ b/src/commons/BUILD
@@ -11,3 +11,11 @@ cc_library(
           ":parameters"],
 	visibility = ["//visibility:public"]
 )
+
+py_library(
+  name = "py_commons",
+  srcs = ["py_commons.py"],
+  data = ["//python:optimizer.so"],
+  imports = ["../../python/"],
+	visibility = ["//visibility:public"]
+)
