--- a/.bazelrc
+++ b/.bazelrc
@@ -1,7 +1,6 @@
 BAZEL_USE_CPP_ONLY_TOOLCHAIN=1
 test --test_output=errors --action_env="GTEST_COLOR=1"
-common --color=yes
 
 // set compiler stuff
 // --action_env CC=/usr/bin/gcc-7
-build --action_env CC=/usr/bin/gcc-7 --cxxopt='-std=c++17' --copt -O3
+build --cxxopt='-std=c++17' --copt="-O3"
