--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -61,7 +61,25 @@
     "variant": "cpp",
     "forward_list": "cpp",
     "unordered_set": "cpp",
-    "valarray": "cpp"
+    "valarray": "cpp",
+    "__bit_reference": "cpp",
+    "__config": "cpp",
+    "__debug": "cpp",
+    "__functional_base": "cpp",
+    "__hash_table": "cpp",
+    "__locale": "cpp",
+    "__mutex_base": "cpp",
+    "__nullptr": "cpp",
+    "__split_buffer": "cpp",
+    "__string": "cpp",
+    "__threading_support": "cpp",
+    "__tree": "cpp",
+    "__tuple": "cpp",
+    "ios": "cpp",
+    "locale": "cpp",
+    "mutex": "cpp",
+    "queue": "cpp",
+    "stack": "cpp"
   },
   "python.pythonPath": "./python/venv/bin/python",
   "python.linting.pylintEnabled": true,
