--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,6 @@ jobs:
       - name: Getting into venv
         run: . ./python/venv/bin/activate
       - name: Installing python dependencies
-        run: pip3 install install numpy matplotlib
+        run: pip3 install numpy matplotlib
       - name: Runing bazel test
         run: bazel test //...
